# arceos-X

./: Cargo.toml  help.html  index.html  search-index.js  settings.html
allocator/: all.html  enum.AllocError.html  index.html  struct.AllocatorRc.html  struct.BitmapPageAllocator.html  struct.BuddyByteAllocator.html  struct.SlabByteAllocator.html  struct.TlsfByteAllocator.html  trait.BaseAllocator.html  trait.ByteAllocator.html  trait.IdAllocator.html  trait.PageAllocator.html  type.AllocResult.html
api/arceos_api/: Cargo.toml
api/arceos_api/src/: lib.rs
api/arceos_api/src/imp/: task.rs
apps/task/sched-occupy/: Cargo.toml
apps/task/sched-static/: Cargo.toml
apps/task/sched_fairness_equal/: Cargo.toml
apps/task/sched_fairness_equal/src/: main.rs
apps/task/sched_fairness_unequal/: Cargo.toml
apps/task/sched_fairness_unequal/src/: main.rs
apps/task/sched_static/: Cargo.toml
apps/task/sched_static/src/: main.rs
apps/task/sched_yield_speed/: Cargo.toml
apps/task/sched_yield_speed/src/: main.rs
arceos_api/: all.html  enum.AxError.html  index.html  type.AxResult.html
arceos_posix_api/: all.html  fn.sys_accept.html  fn.sys_bind.html  fn.sys_clock_gettime.html  fn.sys_close.html  fn.sys_connect.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_epoll_create.html  fn.sys_epoll_ctl.html  fn.sys_epoll_wait.html  fn.sys_exit.html  fn.sys_fcntl.html  fn.sys_freeaddrinfo.html  fn.sys_fstat.html  fn.sys_getaddrinfo.html  fn.sys_getcwd.html  fn.sys_getpeername.html  fn.sys_getpid.html  fn.sys_getrlimit.html  fn.sys_getsockname.html  fn.sys_listen.html  fn.sys_lseek.html  fn.sys_lstat.html  fn.sys_nanosleep.html  fn.sys_open.html  fn.sys_pipe.html  fn.sys_pthread_create.html  fn.sys_pthread_exit.html  fn.sys_pthread_join.html  fn.sys_pthread_mutex_init.html  fn.sys_pthread_mutex_lock.html  fn.sys_pthread_mutex_unlock.html  fn.sys_pthread_self.html  fn.sys_read.html  fn.sys_recv.html  fn.sys_recvfrom.html  fn.sys_rename.html  fn.sys_sched_yield.html  fn.sys_select.html  (+10 more)
arm_gic/: all.html  constant.GIC_MAX_IRQ.html  constant.PPI_RANGE.html  constant.SGI_RANGE.html  constant.SPI_RANGE.html  enum.InterruptType.html  enum.TriggerMode.html  fn.translate_irq.html  index.html
arm_pl011/: all.html  index.html
axalloc/: all.html  fn.global_add_memory.html  fn.global_allocator.html  fn.global_init.html  index.html  struct.GlobalAllocator.html  struct.GlobalPage.html
axconfig/: all.html  constant.ARCH.html  constant.FAMILY.html  constant.KERNEL_BASE_PADDR.html  constant.KERNEL_BASE_VADDR.html  constant.MMIO_REGIONS.html  constant.PCI_BUS_END.html  constant.PCI_ECAM_BASE.html  constant.PCI_RANGES.html  constant.PHYS_MEMORY_BASE.html  constant.PHYS_MEMORY_END.html  constant.PHYS_MEMORY_SIZE.html  constant.PHYS_VIRT_OFFSET.html  constant.PLATFORM.html  constant.SMP.html  constant.TASK_STACK_SIZE.html  constant.TICKS_PER_SEC.html  constant.TIMER_FREQUENCY.html  constant.VIRTIO_MMIO_REGIONS.html  index.html
axdisplay/: all.html  fn.framebuffer_flush.html  fn.framebuffer_info.html  fn.init_display.html  index.html
axdriver/: all.html  enum.AxDeviceEnum.html  fn.init_drivers.html  index.html  struct.AllDevices.html  struct.AxDeviceContainer.html  type.AxBlockDevice.html  type.AxDisplayDevice.html  type.AxNetDevice.html
axerrno/: all.html  enum.AxError.html  enum.LinuxError.html  index.html  macro.ax_err.html  macro.ax_err_type.html  macro.ensure.html  type.AxResult.html  type.LinuxResult.html
axfeat/: all.html  index.html
axfs/: all.html  fn.init_filesystems.html  index.html
axfs_devfs/: all.html  index.html  struct.DeviceFileSystem.html  struct.DirNode.html  struct.NullDev.html  struct.ZeroDev.html
axfs_ramfs/: all.html  index.html  struct.DirNode.html  struct.FileNode.html  struct.RamFileSystem.html
axfs_vfs/: all.html  enum.VfsNodeType.html  index.html  macro.impl_vfs_dir_default.html  macro.impl_vfs_non_dir_default.html  struct.FileSystemInfo.html  struct.VfsDirEntry.html  struct.VfsNodeAttr.html  struct.VfsNodePerm.html  trait.VfsNodeOps.html  trait.VfsOps.html  type.VfsError.html  type.VfsNodeRef.html  type.VfsResult.html
axhal/: all.html  fn.platform_init.html  fn.platform_init_secondary.html  index.html
axio/: all.html  enum.Error.html  enum.SeekFrom.html  index.html  struct.BufReader.html  struct.PollState.html  trait.BufRead.html  trait.Read.html  trait.Seek.html  trait.Write.html  type.Result.html
axlibc/: all.html  fn.abort.html  fn.accept.html  fn.ax_fcntl.html  fn.ax_open.html  fn.bind.html  fn.clock_gettime.html  fn.close.html  fn.connect.html  fn.dup.html  fn.dup2.html  fn.dup3.html  fn.epoll_create.html  fn.epoll_ctl.html  fn.epoll_wait.html  fn.exit.html  fn.free.html  fn.freeaddrinfo.html  fn.fstat.html  fn.getaddrinfo.html  fn.getcwd.html  fn.getpeername.html  fn.getpid.html  fn.getrlimit.html  fn.getsockname.html  fn.listen.html  fn.longjmp.html  fn.lseek.html  fn.lstat.html  fn.malloc.html  fn.mktime.html  fn.nanosleep.html  fn.pipe.html  fn.pthread_create.html  fn.pthread_exit.html  fn.pthread_join.html  fn.pthread_mutex_init.html  fn.pthread_mutex_lock.html  fn.pthread_mutex_unlock.html  fn.pthread_self.html  (+23 more)
axlog/: all.html  fn.init.html  fn.print_fmt.html  fn.set_max_level.html  index.html  macro.ax_print.html  macro.ax_println.html  macro.debug.html  macro.error.html  macro.info.html  macro.trace.html  macro.warn.html  trait.LogIf.html
axnet/: all.html  fn.bench_receive.html  fn.bench_transmit.html  fn.dns_query.html  fn.init_network.html  fn.poll_interfaces.html  index.html  struct.TcpSocket.html  struct.UdpSocket.html
axruntime/: all.html  fn.rust_main.html  fn.rust_main_secondary.html  index.html
axstd/: all.html  index.html  macro.print.html  macro.println.html
crates/load_balance_manager/: Cargo.toml
crates/load_balance_manager/src/: lib.rs  naive.rs  work_stealing.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cfs.rs  lib.rs  mlfq.rs  pbg.rs  rms.rs  sjf.rs
crates/scheduler/src/utils/: timer.rs
modules/axtask/: Cargo.toml
modules/axtask/src/: api.rs  lib.rs  run_queue.rs  task.rs  wait_queue.rs
(+1193 files in other folders)
