[package]
name = "arceos_api"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Public APIs and types for ArceOS modules"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/api/arceos_api"
documentation = "https://rcore-os.github.io/arceos/arceos_api/index.html"

[features]
default = []

irq = ["axfeat/irq"]
alloc = ["dep:axalloc", "axfeat/alloc"]
multitask = ["axtask/multitask", "axfeat/multitask"]
fs = ["dep:axfs", "axfeat/fs"]
net = ["dep:axnet", "axfeat/net"]
display = ["dep:axdisplay", "axfeat/display"]

myfs = ["axfeat/myfs"]

# Multi-task
sched_fifo = ["axtask/sched_fifo", "irq"]
sched_rr = ["axtask/sched_rr", "irq"]
sched_cfs = ["axtask/sched_cfs", "irq"]
sched_sjf = ["axtask/sched_sjf", "irq"]
sched_mlfq = ["axtask/sched_mlfq", "irq"]
sched_rms = ["axtask/sched_rms", "irq"]
sched_pbg = ["axtask/sched_pbg", "irq"]

# Use dummy functions if the feature is not enabled
dummy-if-not-enabled = []

[dependencies]
cfg-if = "1.0"
axfeat = { path = "../axfeat" }
axruntime = { path = "../../modules/axruntime" }
axconfig = { path = "../../modules/axconfig" }
axlog = { path = "../../modules/axlog" }
axio = { path = "../../crates/axio" }
axerrno = { path = "../../crates/axerrno" }
axhal = { path = "../../modules/axhal" }
axalloc = { path = "../../modules/axalloc", optional = true }
axtask = { path = "../../modules/axtask", optional = true }
axfs = { path = "../../modules/axfs", optional = true }
axnet = { path = "../../modules/axnet", optional = true }
axdisplay = { path = "../../modules/axdisplay", optional = true }
