[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "Various scheduler algorithms in a unified interface"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/crates/scheduler"
documentation = "https://rcore-os.github.io/arceos/scheduler/index.html"

[dependencies]
linked_list = { path = "../linked_list" }
axhal = { path = "../../modules/axhal" }
axlog = { path = "../../modules/axlog"}#, features = ["std"]}
cfg-if = "1.0"
crate_interface = { path = "../../crates/crate_interface"}
chrono = { version = "0.4", optional = true }
log = "0.4"
spinlock = { path = "../../crates/spinlock" }