[package]
name = "axtask"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS task management module"
license = "GPL-3.0-or-later OR Apache-2.0"
homepage = "https://github.com/rcore-os/arceos"
repository = "https://github.com/rcore-os/arceos/tree/main/modules/axtask"
documentation = "https://rcore-os.github.io/arceos/axtask/index.html"

[features]
default = ["sched_mlfq"]
smp = ["axhal/smp", "spinlock?/smp"]
multitask = [
    "dep:axconfig", "dep:percpu", "dep:spinlock", "dep:lazy_init", "dep:memory_addr",
    "dep:scheduler", "dep:timer_list", "kernel_guard", "dep:crate_interface", "dep:load_balance_manager"
]
irq = []
tls = ["axhal/tls"]
preempt = ["irq", "percpu?/preempt", "kernel_guard/preempt"]

sched_fifo = ["multitask", "smp"]
sched_rr = ["multitask", "preempt"]
sched_cfs = ["multitask", "preempt"]
sched_sjf = ["multitask"]
sched_mlfq = ["multitask"]
sched_rms = ["multitask"]

test = ["percpu?/sp-naive"]

[dependencies]
array-init = "0.1"
cfg-if = "1.0"
log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
axhal = { path = "../axhal", features = ["smp"]}
axlog = { path = "../axlog"}
axconfig = { path = "../axconfig", optional = true }
percpu = { path = "../../crates/percpu", optional = true }
spinlock = { path = "../../crates/spinlock", optional = true }
lazy_init = { path = "../../crates/lazy_init", optional = true }
memory_addr = { path = "../../crates/memory_addr", optional = true }
scheduler = { path = "../../crates/scheduler", optional = true }
load_balance_manager = { path = "../../crates/load_balance_manager", optional = true}
timer_list = { path = "../../crates/timer_list", optional = true }
kernel_guard = { path = "../../crates/kernel_guard", optional = true }
crate_interface = { path = "../../crates/crate_interface", optional = true }

[dev-dependencies]
rand = "0.8"
axhal = { path = "../axhal", features = ["fp_simd"] }
axtask = { path = ".", features = ["test"] }
