[package]
name = "arceos-sched-test3-occupy"
version = "0.1.0"
edition = "2021"
authors = ["Haoxing Ye <yehx20@mails.tsinghua.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
preempt = ["axstd/sched_rr"]
default = ["axstd/default"]
sched_cfs = ["axstd/sched_cfs"]
sched_mlfq = ["axstd/sched_mlfq"]
sched_sjf = ["axstd/sched_sjf"]
sched_rr = ["axstd/sched_rr"]
sched_fifo = ["axstd/sched_fifo"]

[dependencies]
axstd = { path = "../../../ulib/axstd", default-features = false, features = ["alloc", "paging", "multitask"] }
